syntax = "proto3";

package memwallet;

// Unique identifier for a zcash transaction
message TxId {
  bytes hash = 1;
}

message Address {
  bytes diversifier_index = 1;
  string address = 2;
}

message NoteId {
  TxId tx_id = 1;
  PoolType pool = 2;
  uint32 output_index = 3;
}

enum PoolType {
  Transparent = 0;
  ShieldedSapling = 1;
  ShieldedOrchard = 2;
}

enum ShieldedProtocol {
  sapling = 0;
  orchard = 1;
}

message Memo {
  NoteId note_id = 1;
  bytes memo = 2;
}

message Nullifier {
  ShieldedProtocol protocol = 1;
  bytes nullifier = 2;
}

enum TransactionStatus {
  TxidNotRecognized = 0;
  NotInMainChain = 1;
  Mined = 2;
}

message OutPoint {
  bytes hash = 1;
  uint32 n = 2;
}
